toggle rework to avoid overflow

--- a/src/components/editors/console.scss
+++ b/src/components/editors/console.scss
@@ -50,7 +50,7 @@
     margin: auto 0.25rem;
     // l'elemento era allineato correttamente, ma l'icona stessa non è centrata in verticale. questo lo corregge visualmente.
     height: 10px;
-    margin-top: -3.5px;
+    margin-top: -4.5px;
   }
 }
 
@@ -174,8 +174,12 @@
     font-weight: var(--keyword-weight);
   }
 
+   textarea{
+     margin: 0;
+     margin-top: 0.75rem;
+     margin-bottom: 0.5rem;
+   }
   textarea:focus {
-    border: 2px solid var(--accent);
-    margin: 0;
+    outline: 2px solid var(--accent);
   }
 }
